--- a/Ficheros/config/classNames.properties
+++ b/Ficheros/config/classNames.properties
@@ -1,3 +1,4 @@
 A_mano(sin_persistencia)=SinAlmacenamiento
 Con_Ficheros=AccesoFicheros
-BBDD=AccesoBBDD 
+BBDD=AccesoBBDD
+Acceso_a_JSON=AccesoJSON
