--- a/Ficheros/config/classNames.properties
+++ b/Ficheros/config/classNames.properties
@@ -2,3 +2,4 @@ A_mano(sin_persistencia)=SinAlmacenamiento
 Con_Ficheros=AccesoFicheros
 BBDD=AccesoBBDD
 Acceso_a_JSON=AccesoJSON
+hibernate=AccesoHibernate
